Fixed left alignment of searchbar

--- a/instagram/src/components/SearchBar/SearchBar.css
+++ b/instagram/src/components/SearchBar/SearchBar.css
@@ -26,4 +26,5 @@
 
 .searchbar:not(:placeholder-shown) {
     color: black;
+    text-align: left;
 }
